<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dua_ros_topic_tools</name>
  <version>2.0.0</version>
  <description>ROS topic data flow management utilities and nodes for the DUA framework.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cmd_op_client</depend>
  <depend>qos_relay</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
