<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qos_relay</name>
  <version>2.0.0</version>
  <description>Topic relay node with configurable QoS policies.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>dua_app_management</depend>
  <depend>dua_node_cpp</depend>
  <depend>dua_qos_cpp</depend>
  <depend>params_manager_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmw</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
